--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Nava's Website</title>
 </head>
 <body>
-    <p> this is my Website</p>
+    <p> this is my Website s</p>
 </body>
 </html>
