--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Nava's Website</title>
 </head>
 <body>
-    <p> this is my Website s</p>
+    <div class="block1">
+        <div id="profilePic">
+            <img src="profilePic.jpg" width="350px">
+        </div>
+        <h1>Navaprettam N</h1>
+        <p>As a software engineer, you likely possess a unique set of skills and knowledge related to designing, developing, testing, and maintaining software applications. You may be proficient in various programming languages and have experience working with different operating systems, databases, and software development tools.</p>
+    </div>
+
+    
 </body>
 </html>
