--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Nava's Website</title>
 </head>
 <body>
+    <header>
+        <a href="#" class="logo">Logo</a>
+        <ul>
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </header>
     <div class="block1">
         <div id="profilePic">
             <img src="profilePic.jpg" width="350px">
