button problem solved

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </header>
-    <section>
+    <div id="sec1">
         <img src="profilePic.jpg" id="profilePic">
-        <img src="white_bg.jpg" id="white_bg"> 
-        <h1 id="text1">Navaprettam N</h1>
-        <a href="#" id="btn">About Me</a>
-    </section>
-    <div class="block1">
+        <img src="white_bg.jpg" id="white_bg">
+        <div class="container">
+            <h1 id="text1">Navaprettam N</h1>
+            <a href="#block1" id="btn">About Me</a>
+        </div>
+        
+    </div>
+    <div class="block1" id="block1">
         <img src="profilePic.jpg" width="350px">
         <h1>About me</h1>
         <p>As a software engineer, you likely possess a unique set of skills and knowledge related to designing, developing, testing, and maintaining software applications. You may be proficient in various programming languages and have experience working with different operating systems, databases, and software development tools.<br><br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde quidem expedita minima enim animi, nisi soluta itaque ut corrupti ad esse dolores error molestiae voluptatem consequuntur totam reiciendis facilis quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, id deleniti voluptatibus rerum dignissimos molestiae. Iure tenetur quam vero molestias voluptate vel praesentium, laborum aliquam nam optio dolores deserunt numquam.
