resources files upload

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <div class="sec1">
-        <img src="black_bg.jpg" id="black_bg">
+        <img src="./resources/background.png" id="black_bg">
         <!-- <img src="black_bg.jpg" id="black_bg"> -->
         <img src="profilePic.jpg" id="profilePic">
         <h3>Greetings,</h3><p> I am Navaprettam N, a distinguished software engineer with a wealth of experience in crafting innovative solutions. Known for my aptitude in harnessing cutting-edge technologies, I consistently deliver exceptional results while upholding the highest standards of quality and efficiency. With a proven track record of success, I have garnered a reputation for my expertise in developing robust software systems and driving transformative digital initiatives.</p>
