--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Logo</a>
+        <a href="#" class="logo">NAVA.</a>
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Projects</a></li>
@@ -24,29 +24,13 @@
         <img src="profilePic.jpg" id="profilePic">
         <!-- <h3>Greetings,</h3><p> I am Navaprettam N, a distinguished software engineer with a wealth of experience in crafting innovative solutions. Known for my aptitude in harnessing cutting-edge technologies, I consistently deliver exceptional results while upholding the highest standards of quality and efficiency. With a proven track record of success, I have garnered a reputation for my expertise in developing robust software systems and driving transformative digital initiatives.</p> -->
         <div id="sec1-1">
+            <h1>HEY, I am</h1>
             <h1 id="text1">Navaprettam N</h1>
             <h2>A curious programmer</h2>
             <a href="#block1" id="btn">About Me</a>
         </div>
     </div>
 
-    <div class="block1" id="block1">
-        <img src="profilePic.jpg" width="350px">
-        <h1>About me</h1>
-        <p>As a software engineer, you likely possess a unique set of skills and knowledge related to designing, developing, testing, and maintaining software applications. You may be proficient in various programming languages and have experience working with different operating systems, databases, and software development tools.<br><br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde quidem expedita minima enim animi, nisi soluta itaque ut corrupti ad esse dolores error molestiae voluptatem consequuntur totam reiciendis facilis quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, id deleniti voluptatibus rerum dignissimos molestiae. Iure tenetur quam vero molestias voluptate vel praesentium, laborum aliquam nam optio dolores deserunt numquam.
-        </p>
-    </div>
-    <hr>
-    <div class="block2">
-        <img src="profilePic.jpg" width="350px">
-        <div id="project-names">
-            <h1>Projects</h1>
-            <h2><a href="#">Crew</a></h2>
-            <h2><a href="#">Code red</a></h2>
-            <h2><a href="#">INTELlectuals</a></h2>
-            <h2><a href="#">Rock-Ved</a></h2>
-        </div>
-    </div>
 
     
 </body>
