--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
             <h1>HEY, I am</h1>
             <h1 id="text1">Navaprettam N</h1>
             <h2>A curious programmer</h2>
-            <a href="#block1" id="btn">About Me</a>
+            <a href="#aboutme" id="btn">About Me</a>
         </div>
     </div>
-
+    <div class="aboutme" id="aboutme">
+        <div id="heading">
+            <h1>ABOUT ME</h1>
+        </div>
+        <div id="content">
+            <img src="profilePic.jpg">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus ad perferendis voluptatibus excepturi nemo unde animi assumenda esse nesciunt fugit rem eaque libero saepe nihil inventore asperiores officia, necessitatibus ratione?</p>
+        </div>
+    </div>
 
     
 </body>
