--- a/index.html
+++ b/index.html
@@ -39,7 +39,33 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus ad perferendis voluptatibus excepturi nemo unde animi assumenda esse nesciunt fugit rem eaque libero saepe nihil inventore asperiores officia, necessitatibus ratione?</p>
         </div>
     </div>
-
+    <div class="projects">
+        <h1>My projects</h1>
+        <div id="project1">
+            <h2>project 1</h2>
+            <p>this is the information abot project 1</p>
+        </div>
+        <div id="project2">
+            <h2>project 1</h2>
+            <p>this is the information abot project 1</p>
+        </div>
+        <div id="project3">
+            <h2>project 1</h2>
+            <p>this is the information abot project 1</p>
+        </div>
+        <div id="project4">
+            <h2>project 1</h2>
+            <p>this is the information abot project 1</p>
+        </div>
+        <div id="project5">
+            <h2>project 1</h2>
+            <p>this is the information abot project 1</p>
+        </div>
+        <div id="project6">
+            <h2>project 1</h2>
+            <p>this is the information abot project 1</p>
+        </div>
+    </div>
     
 </body>
 </html>
