adding projects section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="#" class="logo">NAVA.</a>
         <ul>
             <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Projects</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="#">Work</a></li>
             <li><a href="#">Contact Me</a></li>
         </ul>
@@ -39,31 +39,39 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus ad perferendis voluptatibus excepturi nemo unde animi assumenda esse nesciunt fugit rem eaque libero saepe nihil inventore asperiores officia, necessitatibus ratione?</p>
         </div>
     </div>
-    <div class="projects">
+    <div class="projects" id="projects">
         <h1>My projects</h1>
-        <div id="project1">
-            <h2>project 1</h2>
-            <p>this is the information abot project 1</p>
-        </div>
-        <div id="project2">
-            <h2>project 1</h2>
-            <p>this is the information abot project 1</p>
-        </div>
-        <div id="project3">
-            <h2>project 1</h2>
-            <p>this is the information abot project 1</p>
-        </div>
-        <div id="project4">
-            <h2>project 1</h2>
-            <p>this is the information abot project 1</p>
-        </div>
-        <div id="project5">
-            <h2>project 1</h2>
-            <p>this is the information abot project 1</p>
-        </div>
-        <div id="project6">
-            <h2>project 1</h2>
-            <p>this is the information abot project 1</p>
+        <div class="projectcontainers">
+            <div id="project1">
+                <h2>project 1</h2>
+                <img src="./resources/icon_projects.png">
+                <p>this is the information abot project 1</p>
+            </div>
+            <div id="project2">
+                <h2>project 1</h2>
+                <img src="./resources/icon_projects.png">
+                <p>this is the information abot project 1</p>
+            </div>
+            <div id="project3">
+                <h2>project 1</h2>
+                <img src="./resources/icon_projects.png">
+                <p>this is the information abot project 1</p>
+            </div>
+            <div id="project4">
+                <h2>project 1</h2>
+                <img src="./resources/icon_projects.png">
+                <p>this is the information abot project 1</p>
+            </div>
+            <div id="project5">
+                <h2>project 1</h2>
+                <img src="./resources/icon_projects.png">
+                <p>this is the information abot project 1</p>
+            </div>
+            <div id="project6">
+                <h2>project 1</h2>
+                <img src="./resources/icon_projects.png">
+                <p>this is the information abot project 1</p>
+            </div>
         </div>
     </div>
     
