--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact Me</a></li>
+            <li><a href="#">timeline</a></li>
+            <li><a href="#contactme">Contact Me</a></li>
         </ul>
     </header>
 
@@ -75,5 +75,31 @@
         </div>
     </div>
     
+    <div class="timeline" id="timeline">
+        
+    </div>
+
+    <div class="footer" id="contactme">
+        <h1>Contact me</h1>
+        <div id="message">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, quos blanditiis. Perspiciatis dolores harum in, soluta quod reprehenderit saepe ex quam adipisci ipsa possimus, laudantium iusto, molestiae quia? Reprehenderit, inventore.</p>
+        </div>
+        <div id="quicklinks">
+            <h2>Quick links</h2>
+            <ul>
+                <li>link1</li>
+                <li>link1</li>
+                <li>link1</li>
+                <li>link1</li>
+            </ul>
+        </div>
+        <div id="contactinfo">
+            <ul>
+                <li>Phone No. - +917349353427</li>
+                <li>email id - navaprettam.n214@gmail.com</li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 </html>
