--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <p>this is the information abot project 1</p>
             </div>
             <div id="project6">
-                <h2>project 1</h2>
+                <h2>project 1</h2> 
                 <img src="./resources/icon_projects.png">
                 <p>this is the information abot project 1</p>
             </div>
@@ -82,24 +82,27 @@
     <div class="footer" id="contactme">
         <h1>Contact me</h1>
         <div id="message">
+            <h2>Navaprettam N's Portfolio</h2>
+            <br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, quos blanditiis. Perspiciatis dolores harum in, soluta quod reprehenderit saepe ex quam adipisci ipsa possimus, laudantium iusto, molestiae quia? Reprehenderit, inventore.</p>
         </div>
         <div id="quicklinks">
             <h2>Quick links</h2>
             <ul>
-                <li>link1</li>
-                <li>link1</li>
-                <li>link1</li>
-                <li>link1</li>
+                <li><a href="#">link</a></li>
+                <li><a href="#">link</a></li>
+                <li><a href="#">link</a></li>
+                <li><a href="#">link</a></li>
             </ul>
         </div>
         <div id="contactinfo">
             <ul>
-                <li>Phone No. - +917349353427</li>
-                <li>email id - navaprettam.n214@gmail.com</li>
+                <li>Phone No. : <a href="tel:+917349353427">+91 7349353427</a></li>
+                <li>email id : <a href="mailto:navaprettam.n214@gmail.com">navaprettam.n214@gmail.com</a></li>
             </ul>
         </div>
     </div>
 
 </body>
+<script src="index.js"></script>
 </html>
