--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1>ABOUT ME</h1>
         </div>
         <div id="content">
-            <img src="profilePic.jpg">
+            <img src="profilePic.jpg" id="profilePic2">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus ad perferendis voluptatibus excepturi nemo unde animi assumenda esse nesciunt fugit rem eaque libero saepe nihil inventore asperiores officia, necessitatibus ratione?</p>
         </div>
     </div>
@@ -76,7 +76,23 @@
     </div>
     
     <div class="timeline" id="timeline">
-        
+        <h1>MY JOURNEY</h1>
+        <div id="schoolinfo">
+            <h2>School</h2>
+            <img src="./resources/icon_projects.png">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere cupiditate cum quam veniam. Fugit, consectetur quae. Fugiat nostrum, vitae ab nemo natus, laborum debitis non, perspiciatis fuga cupiditate voluptatum adipisci.</p>
+        </div>
+        <div id="puinfo">
+            <h2>School</h2>
+            <img src="./resources/icon_projects.png">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere cupiditate cum quam veniam. Fugit, consectetur quae. Fugiat nostrum, vitae ab nemo natus, laborum debitis non, perspiciatis fuga cupiditate voluptatum adipisci.</p>
+        </div>
+        <div id="collegeinfo">
+            <h2>School</h2>
+            <img src="./resources/icon_projects.png">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere cupiditate cum quam veniam. Fugit, consectetur quae. Fugiat nostrum, vitae ab nemo natus, laborum debitis non, perspiciatis fuga cupiditate voluptatum adipisci.</p>
+        </div>
+
     </div>
 
     <div class="footer" id="contactme">
