adding admin panel

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#">timeline</a></li>
             <li><a href="#contactme">Contact Me</a></li>
+            <li><a href="./admin/index.html">Admin</a></li>
         </ul>
     </header>
 
